# versus-llm

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  versus.py
tests/: test_config.py  test_defaults.py  test_russian_ui.py
