[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "versus-llm"
version = "1.3.0"
description = "Two LLMs enter. One verdict leaves."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pyfiglet>=0.8.0",
    "python-dotenv>=1.0.0",
    "textual>=0.60.0",
]
authors = [{name = "Shah", email = "gyro14888841@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/gyrroxx/versus-llm"

[project.scripts]
versus = "versus:main"

[tool.setuptools]
py-modules = ["versus"]
